[gd_scene load_steps=3 format=3 uid="uid://c4map3d1t0r"]

[ext_resource type="Script" uid="uid://jd3xuxs3b6qv" path="res://scenes/map_editor/map_editor.gd" id="1_editor"]
[ext_resource type="PackedScene" path="res://scenes/map_editor/road_tile.tscn" id="2_road_tile"]

[node name="MapEditor" type="Node2D"]
script = ExtResource("1_editor")

[node name="RoadTiles" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 384)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="Panel" parent="UI"]
offset_right = 1152.0
offset_bottom = 50.0

[node name="TitleLabel" type="Label" parent="UI/TopBar"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 40.0
text = "Map Editor"

[node name="RoadToolButton" type="Button" parent="UI/TopBar"]
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 420.0
offset_bottom = 42.0
toggle_mode = true
button_pressed = true
text = "Road Tool"

[node name="ClearButton" type="Button" parent="UI/TopBar"]
layout_mode = 0
offset_left = 440.0
offset_top = 8.0
offset_right = 520.0
offset_bottom = 42.0
text = "Clear"

[node name="InstructionsLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 520.0
offset_right = 500.0
offset_bottom = 620.0
text = "Road Tool:
  Click empty: Place road (becomes selected)
  Click road: Select it (shows 8 previews)
  Click preview: Place/connect there
  Click outside: Deselect
  Right Click: Delete road
WASD: Move | Scroll: Zoom"
